--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -906,6 +906,12 @@
     <ClCompile Include="Application\SourceCode\Field\AirCollider.cpp">
       <Filter>Uncategorized\Source</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Render\Renderer.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Util\Layer.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -1452,6 +1458,12 @@
       <Filter>Application\Header\Effect</Filter>
     </ClInclude>
     <ClInclude Include="Application\SourceCode\Field\AirCollider.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\Renderer.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Util\Layer.h">
       <Filter>Uncategorized\Header</Filter>
     </ClInclude>
   </ItemGroup>
