--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -921,8 +921,8 @@
     <ClCompile Include="Application\SourceCode\PostEffect\RadialBlur.cpp">
       <Filter>Application\Source\PostEffect</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\Scene\IScene.cpp">
-      <Filter>Uncategorized\Source</Filter>
+    <ClCompile Include="NewEngine\Util\Frustum.cpp">
+      <Filter>NewEngine\Source\Util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1483,6 +1483,9 @@
     </ClInclude>
     <ClInclude Include="Application\SourceCode\PostEffect\RadialBlur.h">
       <Filter>Application\Header\PostEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Util\Frustum.h">
+      <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
