--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -906,9 +906,6 @@
     <ClCompile Include="Application\SourceCode\Effect\SmokeEffect.cpp">
       <Filter>Application\Source\Effect</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\Field\AirCollider.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Debugger\RendererWindow.cpp">
       <Filter>NewEngine\Source\Debugger</Filter>
     </ClCompile>
@@ -923,6 +920,12 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Util\Frustum.cpp">
       <Filter>NewEngine\Source\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Field\AirCollider.cpp">
+      <Filter>Application\Source\Field\FiedlObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Field\Tower.cpp">
+      <Filter>Application\Source\Field\FiedlObject</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1469,9 +1472,6 @@
     <ClInclude Include="Application\SourceCode\Effect\SmokeEffect.h">
       <Filter>Application\Header\Effect</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\Field\AirCollider.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Debugger\RendererWindow.h">
       <Filter>NewEngine\Header\Debugger</Filter>
     </ClInclude>
@@ -1486,6 +1486,12 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Util\Frustum.h">
       <Filter>NewEngine\Header\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\Field\AirCollider.h">
+      <Filter>Application\Header\Field\FieldObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\Field\Tower.h">
+      <Filter>Application\Header\Field\FieldObject</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
